redirected withdraw, deposit, moneytransfer, transaction history and checkrequest point to account details page first so that customer selects account to which tranaction will apply

--- a/src/app/customer-home/customer-home.component.html
+++ b/src/app/customer-home/customer-home.component.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
+          <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
               class="sr-only">(current)</span></a>
         </li>
 
@@ -44,19 +44,19 @@
           <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>AccountDetails</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customertransactionhistory'>Transaction History</a>
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Transaction History</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerwithdrawal'>Withdrawals</a>
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Withdrawals</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerdeposit'>Deposits</a>
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Deposits</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customermoneytransfer'>Money Transfers</a>
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Money Transfers</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBook Requests</a>
+          <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>ChequeBook Requests</a>
         </li>
 
 
@@ -90,7 +90,7 @@
             <h5 class="card-title">Transaction History</h5>
             <p class="card-text">The page shows information about deposits, withdrawals, inbound and outbound transfers
               and internal transfers</p>
-            <a href="#" class="btn btn-secondary" routerLink='/customertransactionhistory'>Click to view Transaction
+            <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to view Transaction
               History</a>
           </div>
         </div>
@@ -107,7 +107,7 @@
             <div class="card-body">
               <h5 class="card-title">Withdrawals</h5>
               <p class="card-text"> This page is to withdraw money</p>
-              <a href="#" class="btn btn-secondary" routerLink='/customerwithdrawal'>Click to Withdraw money</a>
+              <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Withdraw money</a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
             <div class="card-body">
               <h5 class="card-title">Deposits</h5>
               <p class="card-text"> This page is to deposit money</p>
-              <a href="#" class="btn btn-secondary" routerLink='/customerdeposit'>Click to Deposit money</a>
+              <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Deposit money</a>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Money Transfers</h5>
                   <p class="card-text"> This page is to transfer funds</p>
-                  <a href="#" class="btn btn-secondary" routerLink='/customermoneytransfer'>Click to Transfer
+                  <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Transfer
                     Funds</a>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Chequebook Request</h5>
                   <p class="card-text"> This page is to chequebook request</p>
-                  <a href="#" class="btn btn-secondary" routerLink='/customerchequebookrequest'>Click to
+                  <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to
                     request checkbook</a>
                 </div>
               </div>
