--- a/src/app/customer-transactionhistory/customer-transactionhistory.component.html
+++ b/src/app/customer-transactionhistory/customer-transactionhistory.component.html
@@ -1,3 +1,4 @@
+<p>customer-transactionhistory works!</p>
 <!doctype html>
 <html lang="en">
 
@@ -36,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-secondary" routerLink="/customerlogin" href="#"><b>Home </b><span
+                    <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
                             class="sr-only">(current)</span></a>
                 </li>
 
@@ -44,20 +45,20 @@
                     <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>AccountDetails</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-dark" href="#" routerLink='/customertransactionhistory'>Transaction
+                    <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Transaction
                         History</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-dark" href="#" routerLink='/customerwithdrawal'>Withdrawals</a>
+                    <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Withdrawals</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-dark" href="#" routerLink='/customerdeposit'>Deposits</a>
+                    <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>Deposits</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link text-dark" href="#" routerLink='/customermoneytransfer'>Money Transfers</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-dark" href="#" routerLink='/customerchequebookrequest'>ChequeBook
+                    <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>ChequeBook
                         Requests</a>
                 </li>
 
