add logout button and functionality on all admin and customer pages

--- a/src/app/admin-update-password/admin-update-password.component.html
+++ b/src/app/admin-update-password/admin-update-password.component.html
@@ -39,6 +39,15 @@
       <h3><a class="nav-link text-secondary">Admin Portal</a></h3>
     </form>
 
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <ul class="nav navbar-nav navbar-right">
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button>
+      </li>
+    </ul>
+
   </nav>
 
   <!--********Menu bar end*******-->
@@ -58,11 +67,10 @@
           <div class="mt-3"></div>
           <div class="form-group">
 
-            <input class="form-control" type="text" id="username" name="username" value = {{username}}
-              readonly>
+            <input class="form-control" type="text" id="username" name="username" value={{username}} readonly>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" name="password"  [(ngModel)]="users.Newpassword"
+            <input class="form-control" type="password" name="password" [(ngModel)]="users.Newpassword"
               placeholder="New Password">
           </div>
 
@@ -72,16 +80,17 @@
           </div>
 
           <h6 class="text-danger" *ngIf='Passwordnotmatch'>{{errorMessage}}</h6>
-        
-          <div class = "row">
-          <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)="updatePassword(users)">Update Password</button>
-          </div>
 
-          <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)="logout()">Back to Login Page</button>
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <button type="submit" class="btn btn-secondary btn-lg" (click)="updatePassword(users)">Update
+                Password</button>
+            </div>
+
+            <div class="col-md-6 text-center">
+              <button type="submit" class="btn btn-secondary btn-lg" (click)="logout()">Back to Login Page</button>
+            </div>
           </div>
-        </div>
 
           <div class="mt-3"></div>
         </div>
@@ -90,7 +99,7 @@
       </div>
     </div>
 
-  
+
     <br><br><br>
 
   </form>
@@ -111,4 +120,3 @@
 <div class="mt-5"></div>
 
 </html>
-
