--- a/src/app/customer-deposit/customer-deposit.component.html
+++ b/src/app/customer-deposit/customer-deposit.component.html
@@ -67,6 +67,10 @@
             </ul>
         </div>
 
+        <ul class="nav navbar-nav navbar-right">
+            <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+          </ul>
+
     </nav>
     <!--********Menu bar end*******-->
 
