--- a/src/app/customer-home/customer-home.component.html
+++ b/src/app/customer-home/customer-home.component.html
@@ -58,12 +58,13 @@
         <li class="nav-item active">
           <a class="nav-link text-dark" href="#" routerLink='/customeraccountdetails'>ChequeBook Requests</a>
         </li>
-
-
-
-
       </ul>
     </div>
+
+  
+    <ul class="nav navbar-nav navbar-right">
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+    </ul>
 
   </nav>
   <!--********Menu bar end*******-->
