--- a/src/app/customer-transactionhistory/customer-transactionhistory.component.html
+++ b/src/app/customer-transactionhistory/customer-transactionhistory.component.html
@@ -67,6 +67,9 @@
 
             </ul>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+          </ul>
 
     </nav>
     <!--********Menu bar end*******-->
@@ -79,6 +82,8 @@
         <h3><a class="nav-link text-secondary">Customer Portal - Transaction History</a></h3>
     </form>
     <br>
+
+    <!--
     <li class="form-inline my-2 my-lg-0">
         &nbsp; &nbsp;
         <h6>Select transaction type</h6>
@@ -92,7 +97,7 @@
         <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
         (click)='filterTransaction(customertransactions.transtype)'>Submit</button>
 
-    </li>
+    </li>-->
 
 
     <div class="mt-5"></div>
