--- a/src/app/customer-update-password/customer-update-password.component.html
+++ b/src/app/customer-update-password/customer-update-password.component.html
@@ -37,6 +37,10 @@
         <h3><a class="nav-link text-secondary">ICIN Bank - Update Password</a></h3>
       </form>
 
+      <ul class="nav navbar-nav navbar-right">
+        <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+      </ul>
+
     </nav>
   <!--********Menu bar end*******-->
 
