--- a/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
+++ b/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
@@ -39,35 +39,45 @@
       <h3><a class="nav-link text-secondary">Admin Portal - Cheque Book Authorization</a></h3>
     </form>
 
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <ul class="nav navbar-nav navbar-right">
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button>
+      </li>
+    </ul>
+
 
   </nav>
-  
+
   <div class="mt-5"></div>
 
- 
+
   <div class="col-md-3 table-bordered">
     <br>
-   
 
-        <li class="form-inline my-2 my-lg-0">
 
-          <h6>Select status</h6>
-          &nbsp; &nbsp;
-          <select name="Authorize" id="#" [(ngModel)]="chequerequests.status" >
-            <option selected="selected" value=""></option>
-            <option value="wating for approval">waiting for approval</option>
-            <option value="approved">approved</option>
-            <option value="declined">declined</option>
-            </select> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)='filterChequerequest(chequerequests.status)' >Submit</button>
+    <li class="form-inline my-2 my-lg-0">
 
-        </li>
-    
-   
+      <h6>Select status</h6>
+      &nbsp; &nbsp;
+      <select name="Authorize" id="#" [(ngModel)]="chequerequests.status">
+        <option selected="selected" value=""></option>
+        <option value="wating for approval">waiting for approval</option>
+        <option value="approved">approved</option>
+        <option value="declined">declined</option>
+      </select> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+      <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+        (click)='filterChequerequest(chequerequests.status)'>Submit</button>
+
+    </li>
+
+
     <br>
-</div>
+  </div>
 
-<br><br>
+  <br><br>
 
   <div class="col-md-12">
 
@@ -90,8 +100,9 @@
               <option selected="selected" value=""></option>
               <option value="approve">approve</option>
               <option value="decline">decline</option>
-              </select> &nbsp;&nbsp;
-              <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit" (click)='updateStatus(cheque, chequerequest)'>Submit</button>
+            </select> &nbsp;&nbsp;
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+              (click)='updateStatus(cheque, chequerequest)'>Submit</button>
           </td>
         </tr>
 
@@ -108,22 +119,20 @@
 
 
 
-  
+
 
   <!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
 
 
-<div class="mt-5"></div>
-
-
+  <div class="mt-5"></div>
