--- a/src/app/admin-customer-manager/admin-customer-manager.component.html
+++ b/src/app/admin-customer-manager/admin-customer-manager.component.html
@@ -38,7 +38,13 @@
     <form class="form-inline my-2 my-lg-0">
       <h3><a class="nav-link text-secondary">Admin Portal - Customer Manager</a></h3>
     </form>
-
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <ul class="nav navbar-nav navbar-right">
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+    </ul>
 
   </nav>
   <!--********Menu bar end*******-->
