--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -39,6 +39,14 @@
       <h3><a class="nav-link text-secondary">Admin Portal - Home Page</a></h3>
     </form>
 
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <ul class="nav navbar-nav navbar-right">
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+    </ul>
+
 
   </nav>
   <!--********Menu bar end*******-->
