--- a/src/app/customer-registration/customer-registration.component.html
+++ b/src/app/customer-registration/customer-registration.component.html
@@ -72,7 +72,7 @@
           
           <div class = "row">
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Proceed to setup login </button>
+            <button type="submit" class="btn btn-secondary btn-lg" (click)='handleLogin(users); getcustomerbyid()'>Proceed to setup login </button>
           </div>
 
         </div>
