--- a/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
+++ b/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
@@ -35,6 +35,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
+   
+      <a class="nav-link text-warning" routerLink="/adminhome" href="#"><b>Home</b></a>
+
+      &nbsp;&nbsp;&nbsp;&nbsp;
+
     <form class="form-inline my-2 my-lg-0">
       <h3><a class="nav-link text-secondary">Admin Portal - Cheque Book Authorization</a></h3>
     </form>
