--- a/src/app/customer-accountdetails/customer-accountdetails.component.html
+++ b/src/app/customer-accountdetails/customer-accountdetails.component.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
+          <a class="nav-link text-warning" routerLink="/customerhome" href="#"><b>Home </b><span
               class="sr-only">(current)</span></a>
         </li>
 
