--- a/src/app/customer-chequebook-request/customer-chequebook-request.component.html
+++ b/src/app/customer-chequebook-request/customer-chequebook-request.component.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
+          <a class="nav-link text-warning" routerLink="/customerhome" href="#"><b>Home </b><span
               class="sr-only">(current)</span></a>
         </li>
 
@@ -66,7 +66,8 @@
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button>
+      </li>
     </ul>
 
   </nav>
@@ -74,65 +75,63 @@
   <div class="mt-5"></div>
 
   <form class="form-inline my-2 my-lg-0">
-      <h3><a class="nav-link text-secondary">Customer Portal - Cheque Book Request form</a></h3>
+    <h3><a class="nav-link text-secondary">Customer Portal - Cheque Book Request form</a></h3>
   </form>
   <br>
- 
-    <div class="container">
 
-      <div class="row">
+  <div class="container">
 
-        <div class="col-md-6 mt-5 table-bordered ">
-          <h5></h5>
+    <div class="row">
 
-         
+      <div class="col-md-6 mt-5 table-bordered ">
+        <h5></h5>
 
-          <!--<small class="form-text text-muted">Access the portal to view account details, update profile, view sales orders and more</small>-->
-        
-          <div class="form-group">
 
-            <select name="Authorize" id="#" [(ngModel)]="chequerequests.chequetype">
-              <option value="100 Cheques">100 Cheques</option>
-              <option value="50 Cheques">50 Cheques</option>
-              <option value="25 Cheques">25 Cheques</option>
-          </select> 
-         
-          &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
-            <button type="submit" class="btn btn-secondary " (click)='createChequerequest(chequerequests.chequetype)'
-            >Submit Cheque Request</button>
 
+        <!--<small class="form-text text-muted">Access the portal to view account details, update profile, view sales orders and more</small>-->
+
+        <div class="form-group">
+          <label><b>Select Checkbook</b></label>
+          &nbsp;&nbsp;
+          <select name="Authorize" id="#" [(ngModel)]="chequerequests.chequetype">
+            <option value="100 Cheques">100 Cheques</option>
+            <option value="50 Cheques">50 Cheques</option>
+            <option value="25 Cheques">25 Cheques</option>
+          </select>
+          <br><br>
+          
+          <button type="submit" class="btn btn-secondary "
+            (click)='createChequerequest(chequerequests.chequetype)'>Submit Cheque Request</button>
+         &nbsp;&nbsp;
+          <button type="submit" class="btn btn-secondary " (click)='backtoAccountdetails()'>Back to
+            AccountDetails</button>
+          <h6 class="text-success" *ngIf='transactioncomplete'>{{Message}}</h6>
 
         </div>
         <!--form column ends  routerLink = "/adminhome"-->
 
       </div>
     </div>
-    </div>
-
-  
-    <br><br><br><br><br>
+  </div>
 
 
-
-
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous"></script>
-
-
-<div class="mt-5"></div>
+  <br><br><br><br><br>
 
 
 
 
 
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
+
+  <div class="mt-5"></div>
