--- a/src/app/customer-deposit/customer-deposit.component.html
+++ b/src/app/customer-deposit/customer-deposit.component.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
+                    <a class="nav-link text-warning" routerLink="/customerhome" href="#"><b>Home </b><span
                             class="sr-only">(current)</span></a>
                 </li>
 
@@ -101,7 +101,9 @@
 
 
                     <button type="submit" class="btn btn-secondary " (click)='createtransaction(deposits.transamount); updateaccountbyid()'>Deposit Amount</button>
-
+                    &nbsp;&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-secondary " (click)='backtoAccountdetails()'>Back to AccountDetails</button>
+                    <h6 class="text-success" *ngIf='transactioncomplete'>{{Message}}</h6>
 
                 </div>
                 <!--form column ends  routerLink = "/adminhome" (click)='createChequerequest(chequerequests.chequetype)' [(ngModel)]="users.Newpassword"-->
