--- a/src/app/customer-moneytransfer/customer-moneytransfer.component.html
+++ b/src/app/customer-moneytransfer/customer-moneytransfer.component.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
+          <a class="nav-link text-warning" routerLink="/customerhome" href="#"><b>Home </b><span
               class="sr-only">(current)</span></a>
         </li>
 
@@ -66,7 +66,8 @@
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button></li>
+      <li> <button type="button" class="btn btn-secondary my-2 my-sm-0 text-warning" (click)="logout()">Logout</button>
+      </li>
     </ul>
 
   </nav>
@@ -94,24 +95,30 @@
 
           <div class="form-group">
             <label>From Accountnumber:</label>
-            <input class="form-control" type="moneytransfer" name="moneytransfer" value={{accnum}} readonly>
+            <input class="form-control" type="moneytransfer" name="moneytransfer" value={{accnum}} readonly
+              >
           </div>
 
           <div class="form-group">
             <label>To Accountnumber:</label>
             <input class="form-control" type="moneytransfer" name="moneytransfer" placeholder="Enter account number"
-            [(ngModel)]="moneytransfers.accountnumber">
+              [(ngModel)]="moneytransfers.toaccountnumber">
           </div>
 
           <div class="form-group">
             <label>Amount:</label>
-            <input class="form-control" type="moneytransfer" name="moneytransfer"
-              placeholder="Enter amount to transfer" [(ngModel)]="moneytransfers.transamount">
+            <input class="form-control" type="moneytransfer" name="moneytransfer" placeholder="Enter amount to transfer"
+              [(ngModel)]="moneytransfers.transamount">
           </div>
 
 
-          <button type="submit" class="btn btn-secondary " (click)='createtransaction(moneytransfers.transamount); updateaccountbyid(); getToaccountbynum(moneytransfers.accountnumber); createTotransaction(moneytransfers); updateToaccountbyid()'>Transfer Money</button>
-
+          <button type="submit" class="btn btn-secondary "
+            (click)='createtransaction(moneytransfers); updateaccountbyid(moneytransfers); getToaccountbynum(moneytransfers.toaccountnumber); createTotransaction(moneytransfers); updateToaccountbyid(moneytransfers)'>Transfer
+            Money</button>
+          &nbsp;&nbsp;&nbsp;
+          <button type="submit" class="btn btn-secondary " (click)='backtoAccountdetails()'>Back to
+            AccountDetails</button>
+          <h6 class="text-success" *ngIf='transactioncomplete'>{{Message}}</h6>
 
         </div>
         <!--form column ends  routerLink = "/adminhome" (click)='createChequerequest(chequerequests.chequetype)' [(ngModel)]="users.Newpassword"  -->
