--- a/src/app/customer-transactionhistory/customer-transactionhistory.component.html
+++ b/src/app/customer-transactionhistory/customer-transactionhistory.component.html
@@ -1,4 +1,3 @@
-<p>customer-transactionhistory works!</p>
 <!doctype html>
 <html lang="en">
 
@@ -37,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-secondary" routerLink="/customerhome" href="#"><b>Home </b><span
+                    <a class="nav-link text-warning" routerLink="/customerhome" href="#"><b>Home </b><span
                             class="sr-only">(current)</span></a>
                 </li>
 
@@ -108,6 +107,7 @@
                 <tr>
                     <th scope="col">Transaction Date</th>
                     <th scope="col">Transaction Type</th>
+                    <th scope="col">Transfer Account Number</th>
                     <th scope="col">Transaction Amount</th>
                     <th scope="col">Amount in Account</th>
                 </tr>
@@ -118,6 +118,7 @@
 
                     <td>{{transaction.transdate}}</td>
                     <td>{{transaction.transtype}}</td>
+                    <td>{{transaction.transaccountnumber}}</td>
                     <td>{{transaction.transamount}}</td>
                     <td>{{transaction.balanceamount}}</td>
 
