added ids to elements for QA Automation and fixed some bugs found by automation test cases

--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -60,7 +60,7 @@
         <div class="card-body">
           <h5 class="card-title">Customer Manager</h5>
           <p class="card-text">Manage customer access</p>
-          <a href="#" class="btn btn-secondary" routerLink='/admincustomermanager'>Click to go to Customer Manager</a>
+          <a href="#" id="customermanager" class="btn btn-secondary" routerLink='/admincustomermanager'>Click to go to Customer Manager</a>
         </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
         <div class="card-body">
           <h5 class="card-title">Cheque Book Authorization</h5>
           <p class="card-text">Cheque book request approvals</p>
-          <a href="#" class="btn btn-secondary" routerLink='/adminchequebookauth'>Click to go to Cheque Book Authorization</a>
+          <a href="#" id="chequemanager" class="btn btn-secondary" routerLink='/adminchequebookauth'>Click to go to Cheque Book Authorization</a>
         </div>
         </div>
 
