--- a/src/app/customer-accountdetails/customer-accountdetails.component.html
+++ b/src/app/customer-accountdetails/customer-accountdetails.component.html
@@ -94,31 +94,31 @@
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" id = "transactionhistory" type="submit"
               (click)=transactionhistory(account)>Transaction History</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" id = "withdrawal" type="submit"
               (click)=withdrawal(account)>Withdrawals</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" id = "deposit" type="submit"
               (click)=deposit(account)>Deposits</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" id = "moneytransfer" type="submit"
               (click)=moneytransfer(account)>Money Transfers</button>
           </td>
 
           <td>
             &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" name="submit" id = "chequerequest" type="submit"
               (click)=chequerequest(account)>Cheque Requests</button>
           </td>
 
