--- a/src/app/customer-home/customer-home.component.html
+++ b/src/app/customer-home/customer-home.component.html
@@ -79,7 +79,7 @@
           <div class="card-body">
             <h5 class="card-title">Account Details</h5>
             <p class="card-text"> This page shows current balance information for all of your accounts.</p>
-            <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to view Account Details</a>
+            <a href="#" class="btn btn-secondary" id = "accountdetails" routerLink='/customeraccountdetails'>Click to view Account Details</a>
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
             <h5 class="card-title">Transaction History</h5>
             <p class="card-text">The page shows information about deposits, withdrawals, inbound and outbound transfers
               and internal transfers</p>
-            <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to view Transaction
+            <a href="#" class="btn btn-secondary" id = "accountdetailsTH" routerLink='/customeraccountdetails'>Click to view Transaction
               History</a>
           </div>
         </div>
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title">Withdrawals</h5>
               <p class="card-text"> This page is to withdraw money</p>
-              <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Withdraw money</a>
+              <a href="#" class="btn btn-secondary" id = "accountdetailsWM" routerLink='/customeraccountdetails'>Click to Withdraw money</a>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             <div class="card-body">
               <h5 class="card-title">Deposits</h5>
               <p class="card-text"> This page is to deposit money</p>
-              <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Deposit money</a>
+              <a href="#" class="btn btn-secondary" id = "accountdetailsDM" routerLink='/customeraccountdetails'>Click to Deposit money</a>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Money Transfers</h5>
                   <p class="card-text"> This page is to transfer funds</p>
-                  <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to Transfer
+                  <a href="#" class="btn btn-secondary" id = "accountdetailsMT" routerLink='/customeraccountdetails'>Click to Transfer
                     Funds</a>
                 </div>
               </div>
@@ -146,7 +146,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Chequebook Request</h5>
                   <p class="card-text"> This page is to chequebook request</p>
-                  <a href="#" class="btn btn-secondary" routerLink='/customeraccountdetails'>Click to
+                  <a href="#" class="btn btn-secondary" id = "accountdetailsCR" routerLink='/customeraccountdetails'>Click to
                     request checkbook</a>
                 </div>
               </div>
