--- a/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
+++ b/src/app/admin-cheque-book-auth/admin-cheque-book-auth.component.html
@@ -58,7 +58,6 @@
 
   <div class="mt-5"></div>
 
-
   <div class="col-md-3 table-bordered">
     <br>
 
@@ -67,7 +66,7 @@
 
       <h6>Select status</h6>
       &nbsp; &nbsp;
-      <select name="Authorize" id="#" [(ngModel)]="chequerequests.status">
+      <select name="filter" id="#" [(ngModel)]="chequerequests.status">
         <option selected="selected" value=""></option>
         <option value="wating for approval">waiting for approval</option>
         <option value="approved">approved</option>
@@ -85,7 +84,8 @@
   <br><br>
 
   <div class="col-md-12">
-
+    <h6 class="text-success" id="flash" *ngIf='transactioncomplete'>{{successMessage}}</h6>
+    <h6 class="text-danger" id="flash" *ngIf='statusnotselected'>{{errorMessage}}</h6>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -106,7 +106,7 @@
               <option value="approve">approve</option>
               <option value="decline">decline</option>
             </select> &nbsp;&nbsp;
-            <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+            <button class="btn btn-secondary my-2 my-sm-0" id="submitbutton" name="submit" type="submit"
               (click)='updateStatus(cheque, chequerequest)'>Submit</button>
           </td>
         </tr>
