--- a/src/app/admin-customer-manager/admin-customer-manager.component.html
+++ b/src/app/admin-customer-manager/admin-customer-manager.component.html
@@ -64,7 +64,7 @@
 
       <h6>Select status</h6>
       &nbsp; &nbsp;
-      <select name="Authorize" id="#" [(ngModel)]="customers.onlineaccountstatus">
+      <select name="filter" id="#" [(ngModel)]="customers.onlineaccountstatus">
         <option selected="selected" value=""></option>
         <option value="wating for approval">waiting for approval</option>
         <option value="active">active</option>
@@ -81,6 +81,8 @@
 
   <br><br>
   <h6 class="text-danger" *ngIf='OnlineUsernotexist'>{{Message}}</h6>
+  <h6 class="text-danger" id="flash" *ngIf='statusnotselected'>{{errorMessage}}</h6>
+  <h6 class="text-success" id="flash" *ngIf='transactioncomplete'>{{successMessage}}</h6>
   <div class="col-md-12">
 
     <table class="table table-bordered">
@@ -116,7 +118,7 @@
             <option value="activate">activate</option>
             <option value="block">block</option>
           </select> &nbsp;&nbsp;
-          <button class="btn btn-secondary my-2 my-sm-0" name="submit" type="submit"
+          <button class="btn btn-secondary my-2 my-sm-0" id="submitbutton" name="submit" type="submit"
             (click)='updateStatus(cust, customer)'>Submit</button>
            
         </td>
