--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -66,15 +66,15 @@
               placeholder="Password">
           </div>
           
-          <h6 class="text-danger" *ngIf='invalidLogin'>{{errorMessage}}</h6>
+          <h6 class="text-danger" id="flash" *ngIf='invalidLogin'>{{errorMessage}}</h6>
           
           <div class = "row">
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Login to admin portal</button>
+            <button type="submit" id="loginbutton" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Login to admin portal</button>
           </div>
 
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)=updatePassword(users)>Update Password</button>
+            <button type="submit" id="updatebutton" class="btn btn-secondary btn-lg" (click)=updatePassword(users)>Update Password</button>
           </div>
         </div>
 
