--- a/src/app/customer-login/customer-login.component.html
+++ b/src/app/customer-login/customer-login.component.html
@@ -64,16 +64,16 @@
               placeholder="Password">
           </div>
           
-          <h6 class="text-danger" *ngIf='invalidLogin'>{{errorMessage}}</h6>
+          <h6 class="text-danger" id="flash" *ngIf='invalidLogin'>{{errorMessage}}</h6>
           <h6 class="text-danger" *ngIf='accountInactive'>{{Message}}</h6>
           
           <div class = "row">
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Login to Online Banking</button>
+            <button type="submit" id="loginbutton" class="btn btn-secondary btn-lg" (click)=handleLogin(users)>Login to Online Banking</button>
           </div>
 
           <div class="col-md-6 text-center">
-            <button type="submit" class="btn btn-secondary btn-lg" (click)=updatePassword(users)>Update Password</button>
+            <button type="submit" id="updatepassword" class="btn btn-secondary btn-lg" (click)=updatePassword(users)>Update Password</button>
           </div>
         </div>
 
