--- a/src/app/customer-moneytransfer/customer-moneytransfer.component.html
+++ b/src/app/customer-moneytransfer/customer-moneytransfer.component.html
@@ -101,24 +101,24 @@
 
           <div class="form-group">
             <label>To Accountnumber:</label>
-            <input class="form-control" type="moneytransfer" name="moneytransfer" placeholder="Enter account number"
+            <input class="form-control" type="moneytransfer" name="accountnumber" placeholder="Enter account number"
               [(ngModel)]="moneytransfers.toaccountnumber">
           </div>
 
           <div class="form-group">
             <label>Amount:</label>
-            <input class="form-control" type="moneytransfer" name="moneytransfer" placeholder="Enter amount to transfer"
+            <input class="form-control" type="moneytransfer" name="transferamount" placeholder="Enter amount to transfer"
               [(ngModel)]="moneytransfers.transamount">
           </div>
 
 
-          <button type="submit" class="btn btn-secondary "
+          <button type="submit" class="btn btn-secondary " id="transfermoney"
             (click)='createtransaction(moneytransfers); updateaccountbyid(moneytransfers); getToaccountbynum(moneytransfers.toaccountnumber); createTotransaction(moneytransfers); updateToaccountbyid(moneytransfers)'>Transfer
             Money</button>
           &nbsp;&nbsp;&nbsp;
           <button type="submit" class="btn btn-secondary " (click)='backtoAccountdetails()'>Back to
             AccountDetails</button>
-          <h6 class="text-success" *ngIf='transactioncomplete'>{{Message}}</h6>
+          <h6 class="text-success" id="flash" *ngIf='transactioncomplete'>{{Message}}</h6>
 
         </div>
         <!--form column ends  routerLink = "/adminhome" (click)='createChequerequest(chequerequests.chequetype)' [(ngModel)]="users.Newpassword"  -->
