--- a/src/app/customer-withdrawal/customer-withdrawal.component.html
+++ b/src/app/customer-withdrawal/customer-withdrawal.component.html
@@ -99,10 +99,10 @@
                     </div>
 
 
-                    <button type="submit" class="btn btn-secondary " (click)='createtransaction(withdrawals.transamount); updateaccountbyid()'>Withdraw Amount</button>
+                    <button type="submit" class="btn btn-secondary " id="withdrawmoney" (click)='createtransaction(withdrawals.transamount); updateaccountbyid()'>Withdraw Amount</button>
                     &nbsp;&nbsp;&nbsp;
                     <button type="submit" class="btn btn-secondary " (click)='backtoAccountdetails()'>Back to AccountDetails</button>
-                    <h6 class="text-success" *ngIf='transactioncomplete'>{{Message}}</h6>
+                    <h6 class="text-success" id="flash" *ngIf='transactioncomplete'>{{Message}}</h6>
                 </div>
 
             </div>
